# device_faker

./: .gitmodules  Cargo.toml  NOTICES
.github/workflows/: build.yml
device_faker/: Cargo.toml
device_faker/src/: atexit.rs  companion.rs  config.rs  hooks.rs  lib.rs  state.rs
docs/: CONFIG.md  README.md
docs/en/: CHANGELOG.md  CONFIG.md  README.md
module/: config.toml  customize.sh  module.prop
module/webroot/: index.html
module/webroot/assets/: css-BAHZGIKc.js  css-C2a5iD02.js  css-CI4jPNZL.js  css-D-4H6N93.js  css-DSbSnpbv.js  css-DftVIWBU.js  css-jb0ipgao.css  index-21FPbsMR.css  index-3ARIhXFM.js  index-B8h8EJUy.js  index-B8ncxC4W.css  index-BCtAabc9.js  index-BOKJ_kYT.js  index-BV1Oanwu.js  index-BmgRB3lE.css  index-C5jmOmQn.css  index-CEKaa2Fm.css  index-CLo_xhKx.js  index-C_93VoHd.css  index-Cvn4KxZ9.js  index-D4i_hrsF.css  index-D5uuBtat.js  index-DPAzWyoG.js  index-DcqEcw24.css  index-DrB9KtXr.js  index-Dy7A_AIJ.js  index-MW4ioRcW.css  index-NQ8TYCyI.js  index-Y6vSSgwe.js  index-ZAE_48gd.js  index-eonrzxuH.js  index-eyMeq_PG.js
src/: config.rs  lib.rs
webui/: build.py  build_webui.py  components.d.ts  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
webui/src/: App.vue  components.d.ts  style.css  vite-env.d.ts
webui/src/components/: OnlineTemplateDialog.vue
webui/src/components/apps/: AppConfigDialog.vue  AppFilters.vue
webui/src/components/templates/: TemplateCard.vue  TemplateDialog.vue  TemplateList.vue
webui/src/composables/: useAppIcons.ts
webui/src/pages/: AppsPage.vue  SettingsPage.vue  StatusPage.vue  TemplatePage.vue
webui/src/types/: kernelsu-alt.d.ts
webui/src/utils/: i18n.ts  ksu.ts  onlineTemplates.ts
