[package]
name = "device_faker"
version = "1.0.0"
edition = "2021"
authors = ["Seyud"]

[dependencies]
anyhow = { version = "1.0.100", default-features = false }
jni-sys = "^0.4"
log = { version = "^0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
zygisk-rs = { git = "https://github.com/Kr328/zygisk-rs", rev = "bf277f9a", default-features = false, features = ["v4"]}

[build-dependencies]
cc = "1.0"

[lib]
name = "zygisk"
crate-type = ["cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "^0.14"

[profile.release]
strip = true          
opt-level = 3 
lto = "fat"                 
panic = "abort"       
codegen-units = 1     
overflow-checks = false 
debug = false
debug-assertions = false
incremental = false
