[package]
name = "device_faker"
version = "1.1.0"
edition = "2024"
authors = ["Seyud"]

[dependencies]
anyhow = { version = "1.0.100", default-features = false }
jni = { version = "0.21", default-features = false }
log = { version = "^0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
zygisk-api = { git = "https://github.com/Seyud/zygisk-api-rs.git" }

[build-dependencies]
cc = "1.0"

[lib]
name = "zygisk"
crate-type = ["cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "^0.14"

[profile.release]
strip = true          
opt-level = 3 
lto = "fat"                 
panic = "abort"       
codegen-units = 1     
overflow-checks = false 
debug = false
debug-assertions = false
incremental = false
