[package]
name = "device_faker"
version = "1.1.0"
edition = "2024"
authors = ["Seyud"]

[dependencies]
anyhow.workspace = true
jni = { version = "0.21", default-features = false }
log = { version = "^0.4", default-features = false }
serde.workspace = true
toml.workspace = true
zygisk-api = { git = "https://github.com/Seyud/zygisk-api-rs.git" }
serde_json = "1.0"
libc = "0.2"

[build-dependencies]
cc = "1.0"

[lib]
name = "zygisk"
crate-type = ["cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "^0.14"


